[tool.poetry]
name = "example_blog"
version = "0.1.0"
description = "This is example blog system."
authors = ["tanglinhui <frankwolegequ@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.5"
dynaconf = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"